@@ -1,3 +1,7 @@
+1998-03-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* realpath.c (MAXSYMLINKS): Define it as 10 if it isn't defined.
+
 1998-03-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* realpath.c (MAXSYMLINKS): Provide value for cygwin.
